--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "sweetalert2-react-content": "^5.0.7",
         "swiper": "^8.4.7",
         "web-vitals": "^2.1.4",
+        "xlsx": "^0.18.5",
         "yup": "^0.32.11"
     },
     "devDependencies": {
