--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mantine/core": "^5.10.5",
         "@mantine/hooks": "^5.10.5",
         "@popperjs/core": "^2.11.8",
+        "@react-pdf/renderer": "^3.3.6",
         "@reduxjs/toolkit": "^1.9.7",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -37,6 +38,7 @@
         "react": "^18.2.0",
         "react-18-image-lightbox": "^5.1.4",
         "react-apexcharts": "^1.4.1",
+        "react-barcode": "^1.4.6",
         "react-click-away-listener": "^2.2.3",
         "react-copy-to-clipboard": "^5.1.0",
         "react-countup": "^6.5.0",
