--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-text-mask": "^5.4.14",
     "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "apexcharts": "^3.45.0",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
     "formik": "^2.4.5",
@@ -58,6 +59,7 @@
     "react-simplemde-editor": "^5.2.0",
     "react-sortablejs": "^6.1.4",
     "react-text-mask": "^5.5.0",
+    "recharts": "^2.12.7",
     "sortablejs": "^1.15.1",
     "sweetalert2": "^11.10.1",
     "sweetalert2-react-content": "^5.0.7",
