--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "@tippyjs/react": "^4.2.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.68",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-text-mask": "^5.4.14",
     "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "apexcharts": "^3.45.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "easymde": "^2.18.0",
     "formik": "^2.4.5",
     "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
     "mantine-datatable": "^1.8.8",
     "nouislider-react": "^3.4.1",
+    "query-string": "^9.1.0",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-apexcharts": "^1.4.1",
@@ -45,6 +48,7 @@
     "react-click-away-listener": "^2.2.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-flatpickr": "^3.10.13",
