--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-countup": "^6.5.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-export-table-to-excel": "^1.0.6",
     "react-flatpickr": "^3.10.13",
     "react-hot-toast": "^2.4.1",
